# distributed-low-latency-trading-platform

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
apps/: binance_live_md.cpp  coinbase_live_md.cpp  gateway_node.cpp  hyperliquid_live_md.cpp  itch_feed_generator.cpp  itch_live_md.cpp  journal_demo.cpp  kill_switch_demo.cpp  kraken_futures_demo_order.cpp  live_market_data_runtime.cpp  live_multi_venue_router.cpp  market_data_adapter_demo.cpp  market_data_node.cpp  metrics_report.cpp  multi_symbol_book_demo.cpp  multi_venue_router_demo.cpp  oms_node.cpp  replay_demo.cpp  replay_merge.cpp  replay_run.cpp  replay_timeline.cpp  simulator.cpp  strategy_node.cpp  tcp_transport_demo.cpp  threaded_runtime.cpp
configs/: sample_config.yaml
include/llt/: exchange_gateway.hpp  https_client.hpp  journal.hpp  kill_switch.hpp  kraken_futures_demo_gateway.hpp  live_market_data_connectors.hpp  logging.hpp  market_data_adapter.hpp  message_bus.hpp  metrics.hpp  multi_symbol_order_book.hpp  multi_venue_router.hpp  node.hpp  oms.hpp  order_book.hpp  replay.hpp  risk.hpp  spsc_queue.hpp  strategy.hpp  tcp_transport.hpp  threading.hpp  time.hpp  transport_config.hpp  types.hpp  ws_client.hpp
src/: exchange_gateway.cpp  https_client.cpp  journal.cpp  kill_switch.cpp  kraken_futures_demo_gateway.cpp  live_market_data_connectors.cpp  logging.cpp  market_data_adapter.cpp  metrics.cpp  multi_symbol_order_book.cpp  multi_venue_router.cpp  node.cpp  oms.cpp  order_book.cpp  replay.cpp  risk.cpp  strategy.cpp  tcp_transport.cpp  threading.cpp  time.cpp  ws_client.cpp
